# filplus-dmob-data-aggregator

./: Cargo.toml  README.md
.github/workflows/: check.yml
aggregator/: Cargo.toml
aggregator/src/: main.rs  process.rs  spark.rs
dest-db/: Cargo.toml
dest-db/.sqlx/: query-07983795f2d6bff1332621aeb5b8167237b7db78dc0e6c6d7c2d9e9af72706a4.json  query-08c5bca04dde3eef39e947aed35d4938141ae787ad05487b286e14cbc7e3690f.json  query-331c4ba49acaa0f55e1553ab27914f1d58c3235c4b861c5aad66366bbc12001d.json  query-42bce962610cf78b66f5ed82448e7768d6e6e15171e357ae9efcd68c8fb4a4d7.json  query-6c459a8fec3279b9ce2158823510c1e4668479e10c2c44bf6be6c97cbdccb06e.json  query-7d7023890d1bd70b74e8d259cb76d01c29c0f8a27a9a67b23d41dd5dc44aaef7.json  query-86015f326c2fcc9d10cd54cdab9285fdd8c38dd2123ca17ec4f37094ce203ad3.json  query-92ce138507143ef025a0a95d0e68d32d3b74583c3657a38d2166414e4917be12.json  query-ae99ef7fa9bb472cc1b93afe62921ac3a8e757c4a12d3d703ceb6fe3d5b099fe.json  query-b46bbe9424cb566137815dd414b397a6f06d85552cb4265f8f09e26ee0dbb983.json  query-c164910bddc7cb2b327cde340cedc131e9f5e827a996abc89cc03daf584df09d.json  query-d149a22062245252adcdaf612ddf158976460db05ba8156db5570cf8d4e3e140.json  query-d4b9715c0f8a7af50b40083bcf95f21385117516696816b83457460ec2c2539b.json  query-de2a0133aec5a4d77073157208aae4c698168ca3a406e4d728921a96bb2f7f77.json  query-fa456563f510c7cf93d6adebd38cab662a4b75722242599201b5998eb26546b2.json  query-fe05ca0e89ac23b4b215ad4a7966963f51f5e2fb36a6280a2b0a07580ad28c39.json
materializer/: Cargo.toml
source-db/: Cargo.toml
types/: Cargo.toml
(+35 files in other folders)
